--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -62,3 +62,4 @@ Endpoints:
   Public-Port-Name: DB_PROXY_PORT
   Protocols:
   - mongodb
+Source-Url: https://github.com/wzheng1/download-cart-mongodb.git
